--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+### Manual
+# PlantUML
+docs/_build
+docs/_static
+docs/_templates
+decs/*.rst
+
 # Created by .ignore support plugin (hsz.mobi)
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
